# xf86-video-modesetting

./: .gitignore  meson.build  meson_options.txt
man/: meson.build
src/: dri2.c  driver.c  drmmode_display.c  meson.build  pageflip.c  present.c  vblank.c
